# kurtis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.rocm  LICENSE  Makefile  README.md  datasets.yaml  pyproject.toml
benchmarks/Kurtis-Qwen2.5-0.5B-Instruct/: evaluation_results.json
benchmarks/Kurtis-SmolLM2-1.7B-Instruct/: evaluation_results.json
benchmarks/Kurtis-SmolLM2-360M-Instruct/: evaluation_results.json
datasets/kurtis_mental_health/: convert.py  kurtis.parquet
datasets/kurtis_mental_health/src/: kurtis.txt
kurtis/: __main__.py  cli.py  collator.py  dataset.py  defaults.py  dpo.py  evaluate.py  inference.py  model.py  preprocess.py  push.py  train.py  train_dpo.py  ui.py  utils.py  utils_template.py
kurtis/commands/dataset/: analyze.py  augment.py  dpo.py  preprocess.py  translate.py
kurtis/commands/model/: analyze.py  chat.py  evaluate.py  merge.py  push.py  quantize.py  train.py  train_dpo.py
kurtis/config/: default.py  pleias_350m.py  qwen25_500m.py  smollm2_135m.py  smollm2_360m.py  testing.py  verification.py
tests/: conftest.py  test_cli.py  test_collator.py  test_config.py  test_dataset.py  test_inference.py  test_integration.py  test_model.py  test_preprocess.py  test_training_pipeline.py  test_utils.py
