[project]
name = "kurtis"
version = "0.1.1"
authors = [
    {name = "Massimo R. Scamarcia", email = "massimo.scamarcia@gmail.com"},
]
description = "Kurtis SLM Toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "click>=8.1.7",
    "einops>=0.8.0",
    "evaluate>=0.4.3",
    "nltk>=3.9.1",
    "peft>=0.13.2",
    "prompt-toolkit>=3.0.48",
    "protobuf>=5.28.3",
    "pyfiglet>=1.0.2",
    "rich>=13.9.4",
    "rouge-score>=0.1.2",
    "safetensors>=0.4.5",
    "scikit-learn>=1.5.2",
    "sentencepiece>=0.2.0",
    "transformers>=4.51.3",
    "trl>=0.12.0",
    "urwid>=2.6.16",
    "torch==2.6.0 ; platform_machine != 'x86_64'",
    "torch==2.6.0+cu124 ; platform_machine == 'x86_64'",
    "accelerate>=1.1.1",
    "datasets>=3.1.0",
    "numpy>=2.1.3",
    "tqdm>=4.67.0",
    "bitsandbytes>=0.44.1 ; platform_machine == 'x86_64'",
    "setuptools>=75.3.0",
    "openai>=1.76.0",
    "python-slugify>=8.0.4",
    "huggingface-hub[hf-xet]>=0.30.2",
    "pyyaml>=6.0.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "platform_machine == 'x86_64'"}

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.3",
]

[[package]]
name = "kurtis"
version = "0.1.2"

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kurtis"]
exclude = ["results*", "data*"]
